Closed
Bug 256711
Opened 21 years ago
Closed 20 years ago
object tag content not displayed (was: Recent branch nightly cannot launch Windows Media Player)
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: nparks, Assigned: jst)
References
()
Details
(Keywords: fixed-aviary1.0, fixed1.7.5, regression)
Attachments
(1 file)
|
2.12 KB,
patch
|
brendan
:
review+
brendan
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; rv:1.7) Gecko/20040803 Firefox/0.9.3
Build Identifier: Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; rv:1.7.2) Gecko/20040820 Firefox/0.9.1+
Please see Bug #253046, comment #55 and comment #56. Please consider this the
"separate bug" suggested in comment #56.
On some sites that provide streaming audio or video using Windows Media Player,
the streams cannot be accessed with recent nightlies. FF wrongly claims that a
plugin needs to be installed.
Two such sites are:
www.kabc.com
www.nakednews.com
Reproducible: Always
Steps to Reproduce:
1. Using a recent branch nightly such as Aug 20, visit
http://www.kabc.com/listenlive.asp .
2. Click on the link: "Netscape users click here for TalkRadio 790 KABC on the
Internet!"
3. Repeat steps 1 and 2 using 0.9.3 milestone.
Actual Results:
Using nightly, FF told me I needed to install a plugin. When I clicked the
button to install, FF told me there is no plugin to install.
Using milestone, the WMP plugin opened and played the streaming audio.
Expected Results:
Open the WMP plugin and play the audio stream.
| Reporter | ||
Updated•21 years ago
|
Flags: blocking-aviary1.0PR?
Flags: blocking-aviary1.0?
Updated•21 years ago
|
Assignee: firefox → jst
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 1•21 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.2) Gecko/20040823
Firefox/0.9.1+
Confirming, same problem here
| Assignee | ||
Comment 2•21 years ago
|
||
Hmm, I do get the WMP plugin in the new window that opens when you click that
link, but my tree is a but out of date... I'll update and test more...
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•21 years ago
|
||
Ok, I see it now... investigating.
Comment 4•21 years ago
|
||
In Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.2) Gecko/20040818
Firefox/0.9.1+ it still works
Obviously pointing at
bug 244125 or
bug 253046
Updated•21 years ago
|
Keywords: regression
| Assignee | ||
Comment 5•21 years ago
|
||
| Assignee | ||
Comment 7•21 years ago
|
||
Comment on attachment 156910 [details] [diff] [review]
Don't render the "default plugin" for object tags, as their content may be what we want to show.
This is a regression from the default plugin replacement bug.
Attachment #156910 -
Flags: superreview?(brendan)
Attachment #156910 -
Flags: review?(dbaron)
Comment 8•21 years ago
|
||
Comment on attachment 156910 [details] [diff] [review]
Don't render the "default plugin" for object tags, as their content may be what we want to show.
How *did* we miss that ;-)?
/be
Attachment #156910 -
Flags: superreview?(brendan)
Attachment #156910 -
Flags: superreview+
Attachment #156910 -
Flags: review?(dbaron)
Attachment #156910 -
Flags: review+
| Assignee | ||
Comment 9•21 years ago
|
||
Comment on attachment 156910 [details] [diff] [review]
Don't render the "default plugin" for object tags, as their content may be what we want to show.
Requesting aviary approval.
Attachment #156910 -
Flags: approval-aviary?
Comment 10•21 years ago
|
||
Comment on attachment 156910 [details] [diff] [review]
Don't render the "default plugin" for object tags, as their content may be what we want to show.
a=asa for aviary checkin.
Attachment #156910 -
Flags: approval-aviary? → approval-aviary+
Comment 11•21 years ago
|
||
Here's another such site:
http://www.georgewbush.com/News/MultiMedia/VideoPlayer.aspx?ID=984&T=5
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.2) Gecko/20040820
Firefox/0.9.1+
| Assignee | ||
Comment 12•21 years ago
|
||
Thanks, that page is also fixed by this patch.
This is now fixed on the aviary branch.
Keywords: fixed-aviary1.0
| Assignee | ||
Comment 13•21 years ago
|
||
Updating summary as this is not in any way specific to Windows Media Player.
Summary: Recent branch nightly cannot launch Windows Media Player → object tag content not displayed (was: Recent branch nightly cannot launch Windows Media Player)
Comment 14•21 years ago
|
||
Using the latest sweetlou build, the problem is still present...
http://omgwtf.superlime.com/rusty.wmv
I still just get the "download new plugin" deal.
OS: Windows ME → All
Comment 15•21 years ago
|
||
The latest sweetlou was before this patch was checked in - tinderbox shows it as
having troubles.
| Reporter | ||
Comment 16•21 years ago
|
||
Bug #256713 seems to be similar to this one.
| Assignee | ||
Comment 17•21 years ago
|
||
*** Bug 256713 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 18•21 years ago
|
||
Mozilla/5.0 (Windows; U; Win 9x 4.90; en-US; rv:1.7.2) Gecko/20040827 Firefox/0.9.1+
WMP streaming media seem to be ok with the 8/27 branch nightly.
Comment 19•21 years ago
|
||
I was having this bug on aviary 20040824, now it WFM
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.2) Gecko/20040827
Firefox/0.9.1+ (old profile, win xp sp2)
Comment 20•21 years ago
|
||
Well I can quite perfectly listen to KABC and watch NakedNews via the links
provided at the top of this page, but still cannot watch this one:
http://skynet.rtbf.be/index.html?pj=1734 (Belgian public TV news)
even after I (re)installed the plugin found at:
http://www.microsoft.com/windows/windowsmedia/download/plugin.aspx
I also copied the content of wmpplugin.exe to my firefox\plugins folder, no
result either.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20040831
Firefox/0.9.1+
Updated•21 years ago
|
Flags: blocking-aviary1.0PR?
Flags: blocking-aviary1.0?
Comment 21•21 years ago
|
||
Noting that we'd block PR1 for this, even though the patch is in.
/be
Flags: blocking-aviary1.0PR+
Comment 22•21 years ago
|
||
(In reply to comment #20)
> Well I can quite perfectly listen to KABC and watch NakedNews via the links
> provided at the top of this page, but still cannot watch this one:
> http://skynet.rtbf.be/index.html?pj=1734 (Belgian public TV news)
Same comment + the following page appears empty with no display of the Flash
content (EMBED within an OBJECT)
http://aideab.contacts.wanadoo.fr/demo.html
The Flash shows up in "right-click/page info/media" tab and functions correctly
when it's direct url is fed in manually.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040803
Firefox/0.9.3
| Assignee | ||
Comment 23•21 years ago
|
||
Worksforme, please test with a more recent build (wait for PR1 if you don't want
to download a nightly build).
Comment 24•21 years ago
|
||
(In reply to comment #20)
>cannot watch this one:
> http://skynet.rtbf.be/index.html?pj=1734 (Belgian public TV news)
Nevermind, human error... They wrote embed type="video/x-ms-wmp" instead of
embed type="video/x-ms-wmv".
Here we go, happy :-)
| Assignee | ||
Updated•21 years ago
|
Keywords: fixed1.7.5
| Assignee | ||
Comment 25•20 years ago
|
||
Fix landed on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•