Fixing bug 256711. Make object tags render their content in stead of defaulting to the 'default plugin' when we don't have a plugin suitable for the object tag. r+sr=brendan@mozilla.org, a=asa@mozilla.org